--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="problem">Nun bekommt ihr ein offensichtliches und mögliches Problem . Du musst dir eine Lösung zu dieser Situation überlegen und in die Eingabefläche tippen, die im später Schritt erscheint.</string>
     <string name="culture">Erfahrung mit Kultur</string>
     <string name="culture_introduction">Nun ist eure efahrung mit der Kultur gefragt. Ihr habt nun etwas Zeit, um Geschichten zu Kultur zuerzählen. Diese werden dann im Anschluss von eurem Mitspieler bewertet.</string>
+    <string name="request_answer">Warte auf Lösung</string>
+    <string name="intorduction_text_rating">Nun werden die beiden Lösungen vorgestellt und du kann eine Punktevergabe von 1-5 Punktenvornehmen. Durch die Chattingoption könnt iht miteinander chatten und erhalten so die Möglichkeit sich über die Lösungen auszutauschen. Es werden nur ganze Sterne Vergeben.</string>
+    <string name="no_answer">Noch hat dein Mitspieler keine Lösung eingegeben</string>
+    <string name="connection_explained">Hier kannst du dich mit deinem Mitspieler verbinden. Dafür brauchst du eine verbindung via Chat zu deinem Mitspieler. Einer von euch beiden muss ein Game erstellen und die ID die auf dem Bildschirm erscheint dem gegenüber zuschicken. Diese muss dann in das Text-Feld eingegeben werden. Dieses erscheint nur wenn man auf Game Beitreten drückt.</string>
+    <string name="create_game">Game erstellen</string>
+    <string name="conenct_to_game">Game Beitreten</string>
+    <string name="id_input">ID Hier eingeben</string>
+    <string name="explain_to_wait">Es sieht so aus als wäre dein Mitspieler noch nicht bereit. Wenn dieser Fertig ist, wird automatisch das Thema angezeigt.</string>
 </resources>
