--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="stage">Stufe %1$s</string>
     <string name="player1_points">%1$s hat %2$s</string>
     <string name="palyer2_points">%1$s hat %2$s Punkte</string>
+    <string name="Stage_text">Stufe %1$s</string>
 </resources>
