--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,13 @@
     <string name="player1_points">%1$s hat %2$s</string>
     <string name="palyer2_points">%1$s hat %2$s Punkte</string>
     <string name="Stage_text">Stufe %1$s</string>
+    <string name="continue_game">weiterspielen</string>
+    <string name="copyID">Kopiere ID</string>
+    <string name="startGame">Game Starten</string>
+    <string name="checkID">ID Prüfen</string>
+    <string name="playernumber_Input">Spielernummer hier eingeben</string>
+    <string name="wrongID">Falsche ID</string>
+    <string name="wrongIDExplained">Die eingebene ID wurde nicht in der Datenbank gefunden. Prüfe ob diese korrekt ist und versuche es erneut</string>
+    <string name="player_1">Player 1</string>
+    <string name="player_2">Player 2</string>
 </resources>
