--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,8 +47,7 @@
     <string name="culture_question">Wo kann man Kultur erleben?</string>
     <string name="culture_places">Wähle die Orte die du am meisten kennst oder magst</string>
     <string name="stage">Stufe %1$s</string>
-    <string name="player1_points">%1$s hat %2$s</string>
-    <string name="palyer2_points">%1$s hat %2$s Punkte</string>
+    <string name="player_points">%1$s hat %2$s Punkte</string>
     <string name="Stage_text">Stufe %1$s</string>
     <string name="continue_game">weiterspielen</string>
     <string name="copyID">Kopiere ID</string>
@@ -59,4 +58,5 @@
     <string name="wrongIDExplained">Die eingebene ID wurde nicht in der Datenbank gefunden. Prüfe ob diese korrekt ist und versuche es erneut</string>
     <string name="player_1">Player 1</string>
     <string name="player_2">Player 2</string>
+    <string name="fragen_ausgewahlt">%1$s Fragen ausgewählt</string>
 </resources>
